deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sumot-service
spec:
  selector:
    app: sumot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
