deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sumot-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sumot.lab.sspcloud.fr
  rules:
  - host: sumot.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sumot-service
            port:
              number: 80
